--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,12 @@
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
-  "keywords": ["food", "ecommerce", "organic", "mern"],
+  "keywords": [
+    "food",
+    "ecommerce",
+    "organic",
+    "mern"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -16,7 +21,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "multer": "^2.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
